# freedom-launcher

./: .travis.yml  Makefile.am  README.md  configure.ac
metadata/: layout.conf
scripts/: launch  launch-simv
